Sun Jan 30 13:25:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Reactor/Timers.cpp:
          Fixed compile problem in unicode build

Sun Jan 30 13:22:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/TMCast/Member/member.cpp:
          Fixed compile problem in unicode build

Sun Jan 30 13:04:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
        * include/makeinclude/*.bor:
        * bin/MakeProjectCreator/templates/bor.mpd:
          Removed support for PASCAL, this was used for BCB4 which is already
          not supported already for a long time

Sat Jan 29 23:55:03 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* examples/Misc/test_read_buffer.cpp:
	* examples/Service_Configurator/IPC-tests/server/Handle_L_SPIPE.i:
	* examples/Web_Crawler/URL.h:

	  Added missing header include directives that are necessary due
	  to inter-header dependency reductions in ACE.

Sat Jan 29 23:44:37 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* examples/ASX/Event_Server/Event_Server/event_server.cpp:
	* examples/ASX/Event_Server/Transceiver/transceiver.cpp:
	* examples/ASX/UPIPE_Event_Server/event_server.cpp:

	  Added missing "ace/OS_NS_unistd.h" include directives.  Fixes
	  compile-time errors related to missing function prototypes.

Sat Jan 29 11:12:58 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* examples/OS/Process/process.cpp:

        Fixed compile errors due to (now) missing includes because of include
        reductions done to Service_Config.h and Svc_Handler.h.

Sat Jan 29 16:12:37 2005  Martin Corino  <mcorino@remedy.nl>

        * apps/Gateway/Gateway/gatewayd.cpp:
        * examples/APG/Svc_Config/HA_Status_Static.h:
        * examples/ASX/CCM_App/SC_Server.cpp:
        * examples/Connection/blocking/SPIPE-acceptor.h:
        * examples/Connection/blocking/SPIPE-connector.h:
        * examples/Connection/misc/test_upipe.h: