@@ -18,23 +18,23 @@ class ACE_Svc_Export Test_Task : public MT_Task
 public:
   virtual int open (void *);
   virtual int close (u_long);
-  virtual int init (int, char *[]);
+  virtual int init (int, ACE_TCHAR *[]);
   virtual int fini (void);
   virtual int suspend (void);
   virtual int resume (void);
 };
 
-int 
+int
 Test_Task::open (void *)
-{ 
+{
   ACE_DEBUG ((LM_DEBUG,
               ACE_TEXT ("opening %s\n"),
               this->name () ? this->name () : ACE_TEXT ("task")));
   return 0;
 }
 
-int 
-Test_Task::close (u_long) 
+int
+Test_Task::close (u_long)
 {
   ACE_DEBUG ((LM_DEBUG,
               ACE_TEXT ("closing %s\n"),
@@ -42,17 +42,17 @@ Test_Task::close (u_long)
   return 0;
 }
 
-int 
-Test_Task::suspend (void) 
-{ 
+int
+Test_Task::suspend (void)
+{
   ACE_DEBUG ((LM_DEBUG,
               ACE_TEXT ("suspending in %s\n"),
               this->name () ? this->name () : ACE_TEXT ("task")));
-  return 0; 
+  return 0;
 }
 
-int 
-Test_Task::resume (void) 
+int
+Test_Task::resume (void)
 {
   ACE_DEBUG ((LM_DEBUG,
               ACE_TEXT ("resuming in %s\n"),
@@ -60,23 +60,23 @@ Test_Task::resume (void)
   return 0;
 }
 
-int 
-Test_Task::init (int, char *[])
+int
+Test_Task::init (int, ACE_TCHAR *[])
 {
   ACE_DEBUG ((LM_DEBUG,
               ACE_TEXT ("initializing %s\n"),
               this->name () ? this->name () : ACE_TEXT ("task")));
 
-  return 0; 
+  return 0;
 }
 
-int 
+int
 Test_Task::fini (void)
 {
   ACE_DEBUG ((LM_DEBUG,
               ACE_TEXT ("finalizing %s\n"),
               this->name () ? this->name () : ACE_TEXT ("task")));
-  return 0; 
+  return 0;
 }
 
 // Factories used to control configuration.
