@@ -1,3 +1,8 @@
+Sun Jan 30 13:28:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * examples/APG/Logging/Wrap_Macros.cpp:
+          Fixed compile problem in unicode build
+
 Sun Jan 30 13:25:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * examples/APG/Reactor/Timers.cpp:
